--- a/public_html/documentation/style.css
+++ b/public_html/documentation/style.css
@@ -6,3 +6,12 @@ img {
     max-width: 100%;
     height: auto;
 }
+
+
+/* Centered text */
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
