updated email validator in script.js file

--- a/public_html/style1.css
+++ b/public_html/style1.css
@@ -30,12 +30,11 @@ img {
 
 .stroke {
     h-shadow: 1;
-    v-shadow:
 }
 
 /*
 Sticky navbar
 */
-.navbar {
+.sticky-top {
     position: sticky;
 }
