--- a/public_html/style1.css
+++ b/public_html/style1.css
@@ -40,3 +40,21 @@ Sticky navbar
 .sticky-top {
     position: sticky;
 }
+
+
+p {
+    font-family: "futura";
+}
+
+
+h2,h3,h1,h4,h6 {
+    font-family: "Futura";
+}
+
+.aboutgrad {
+    background-image: linear-gradient(to right, rgb(56, 222, 199), rgb(91, 192, 222));
+}
+/*
+
+
+ */
