--- a/public_html/style1.css
+++ b/public_html/style1.css
@@ -8,6 +8,12 @@
 
 .navbar {
     position: sticky;
+    width: 100%;
+    /*
+    background-color: rgba(0,0,0,.2);
+    */
+    /*background: url("documentation/img/photos/closeUpDeskFinal-min.jpg") no-repeat;*/
+
 }
 
 /*
@@ -21,6 +27,9 @@ img {
     height: auto;
 }
 
+.aboutimg {
+    max-width: 90%;
+}
 
 /* Centered text */
 .centered {
@@ -58,3 +67,22 @@ h2,h3,h1,h4,h6 {
 
 
  */
+
+.shake:hover {
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
